--- a/speech-input.css
+++ b/speech-input.css
@@ -1,13 +1,13 @@
-.speech-input-wrapper {
+.si-wrapper {
 	display: inline-block;
 	position: relative;
 }
 
-.speech-input-wrapper input {
+.si-wrapper input {
 	margin: 0;
 }
 
-.speech-input-wrapper button {
+.si-wrapper button {
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -17,19 +17,20 @@
 	border: 0;
 	padding: 0;
 	background: none;
+	font: 0/0 a;
 }
 
-.icon > .mic,
-.icon > .mic:after,
-.icon > .holder,
-.icon > .holder:before,
-.icon > .holder:after {
+.si-mic,
+.si-mic:after,
+.si-holder,
+.si-holder:before,
+.si-holder:after {
 	position: absolute;
 	background: #333;
 }
 
-/* Microphone */
-.icon > .mic {
+/* Microphone icon */
+.si-mic {
 	display: block;
 	height: 25%; /* 8px / 32px */
 	top: 9.375%; /* 3px / 32px */
@@ -40,15 +41,15 @@
 	border-radius: 99px 99px 0 0;
 }
 
-.icon > .mic:before,
-.icon > .mic:after,
-.icon > .holder {
+.si-mic:before,
+.si-mic:after,
+.si-holder {
 	-webkit-border-radius: 0 0 99px 99px;
 	-moz-border-radius: 0 0 99px 99px;
 	border-radius: 0 0 99px 99px;
 }
 
-.icon > .mic:before {
+.si-mic:before {
 	position: absolute;
 	z-index: 1;
 	content: '';
@@ -59,7 +60,7 @@
 	background: #fff;
 }
 
-.icon > .mic:after {
+.si-mic:after {
 	z-index: 1;
 	content: '';
 	width: 100%; /* 10px / 10px */
@@ -68,7 +69,7 @@
 	left: 0;
 }
 
-.icon > .holder {
+.si-holder {
 	display: block;
 	height: 40.625%; /* 13px / 32px */
 	width: 50%; /* 16px / 32px */
@@ -76,7 +77,7 @@
 	top: 37.5%; /* 12px / 32px */
 }
 
-.icon > .holder:after {
+.si-holder:after {
 	content: '';
 	width: 66.666%; /* 8px / 16px */
 	height: 18.182%; /* 2px / 13px */
@@ -84,7 +85,7 @@
 	left: 16.667%; /* 2px / 16px */
 }
 
-.icon > .holder:before {
+.si-holder:before {
 	content: '';
 	width: 33.333%; /* 4px / 16px */
 	height: 27.273%; /* 3px / 13px */
